--- a/src/main/java/modules/todo/Project/views/_projectOperator.xml
+++ b/src/main/java/modules/todo/Project/views/_projectOperator.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <view xmlns="http://www.skyve.org/xml/view" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" name="_projectOperator" title="Project" xsi:schemaLocation="http://www.skyve.org/xml/view ../../../../schemas/view.xsd">
-    <form responsiveWidth="12" percentageWidth="60" border="true" borderTitle="Project Operator">
+    <form border="true" borderTitle="Project Operator">
         <column percentageWidth="30" responsiveWidth="4"/>
         <column/>
         
