add condition to show user dropdownbox

--- a/src/main/java/modules/todo/Staff/views/_contactInfo.xml
+++ b/src/main/java/modules/todo/Staff/views/_contactInfo.xml
@@ -6,7 +6,7 @@
         
         <row>
             <item>
-                <default binding="user"/>
+            	<lookupDescription descriptionBinding="bizKey" binding="user" visible="staffManager"/>
             </item>
         </row>
         <row>
